--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\Doheon\\Desktop\\Doheon\\documents\\AI_School\\DeepfakeBlock\\api\\venv\\Scripts\\python.exe"
 }
