--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit-converters:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    // Crop Image API
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
