--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 api/.vscode/
 
 api/tog/model_weights/
+api/yolov3/yolov3_face.weights
+api/image/
+api/video/
+
+Untitiled.ipynb
+videoattack.ipynb
 
 ### Django ###
 
